[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-output-parser"
version = "0.1.0"
description = "Parse LLM outputs into structured data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PHclaw", email = "168465420@qq.com"}
]
requires-python = ">=3.9"
keywords = ["ai", "agent", "llm", "parser", "pydantic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]